--- a/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyOrgUnit.yaml
@@ -10,7 +10,7 @@ Actions:
       Values:
         Action: Modify
         RunSequential: false
-        QueryGroupMembership: false
+        ReturnGroupMembership: false
         OutputType: Json
         PrettyPrint: false
         ReturnObjects: true
@@ -18,8 +18,8 @@ Actions:
         ReturnObjectProperties: true
         SuppressOutput: false
       Dynamic:
-      - Name: querygroupmembership
-        Path: QueryGroupMembership
+      - Name: returngroupmembership
+        Path: ReturnGroupMembership
       - Name: returnobjects
         Path: ReturnObjects
       - Name: returnobjectproperties
