- Added "Initialize" method to IRoleManager - Added utility function to get Parent Path of an object. - Fixed search bug in GetOrganizationalUnit - Added "Inheritance" variable to AddAccessRule and SetAccessRule - Added "HandlerConfig" to specify RoleHandler and associated config.

--- a/Synapse.Handlers.ActiveDirectory/Synapse.Handlers.ActiveDirectory.csproj
+++ b/Synapse.Handlers.ActiveDirectory/Synapse.Handlers.ActiveDirectory.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\AdObjects\AdSearchRequest.cs" />
+    <Compile Include="Classes\Config\HandlerConfig.cs" />
     <Compile Include="Classes\ResultObjects\ActiveDirectoryHandlerResults.cs" />
     <Compile Include="Classes\ResultObjects\ActiveDirectoryObjectResult.cs" />
     <Compile Include="Classes\AdObjects\AdAccessRule.cs" />
