--- a/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
+++ b/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Classes\AccessRuleObject.cs" />
     <Compile Include="Classes\AdException.cs" />
+    <Compile Include="Classes\DefaultRoleManager.cs" />
     <Compile Include="Classes\DirectoryEntryObject.cs" />
     <Compile Include="Classes\OrganizationalUnitObject.cs" />
     <Compile Include="Classes\GroupPrincipalObject.cs" />
