--- a/Synapse.Handlers.ActiveDirectory/Synapse.Handlers.ActiveDirectory.csproj
+++ b/Synapse.Handlers.ActiveDirectory/Synapse.Handlers.ActiveDirectory.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\AdObjects\AdRole.cs" />
     <Compile Include="Classes\AdObjects\AdSearchRequest.cs" />
     <Compile Include="Classes\Config\HandlerConfig.cs" />
     <Compile Include="Classes\ResultObjects\ActiveDirectoryHandlerResults.cs" />
