- Code Cleanup - Created base "DirectoryEntry" class for all DE based objects.  Modified OrgUnit class methods to use new DirectoryEntry methods instead.

--- a/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
+++ b/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Classes\SerializableDictionary.cs" />
     <Compile Include="Classes\UserPrincipalObject.cs" />
     <Compile Include="Interfaces\IRoleManager.cs" />
+    <Compile Include="Runtime\DirectoryEntry.cs" />
     <Compile Include="Runtime\Group.cs" />
     <Compile Include="Runtime\OrgUnit.cs" />
     <Compile Include="Runtime\Security.cs" />
