- Updated to newest versoin of Synapse.Core - Changednamespaces for tests, depending on type of test. - Fixed bug with "User/Group/OU Not Found" error not being returned. - Started Creating UserTest for Handlers.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/CreateUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/CreateUser.yaml
@@ -145,6 +145,7 @@ Actions:
 #   Other Fields
     - Name: password
       Path: Users[0]:Password
+#   Properties
     - Name: initials
       Path: Users[0]:Properties:initials
       Parse: true
