--- a/Synapse.ActiveDirectory.Tests/Synapse.ActiveDirectory.Tests.csproj
+++ b/Synapse.ActiveDirectory.Tests/Synapse.ActiveDirectory.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Core\OrgUnitTests.cs" />
     <Compile Include="Core\SearchTests.cs" />
     <Compile Include="Handler\GroupTests.cs" />
+    <Compile Include="Handler\OrgUnitTets.cs" />
     <Compile Include="Handler\UserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\UserTests.cs" />
