--- a/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/DeleteGroup.yaml
@@ -14,19 +14,19 @@ Actions:
         PrettyPrint: false
         SuppressOutput: false
       Dynamic:
-      - Name: returngroupmembership
-        Path: ReturnGroupMembership
-      - Name: returnobjects
-        Path: ReturnObjects
-      - Name: returnobjectproperties
-        Path: ReturnObjectProperties
-      - Name: returnaccessrules
-        Path: ReturnAccessRules
+      - Source: returngroupmembership
+        Target: ReturnGroupMembership
+      - Source: returnobjects
+        Target: ReturnObjects
+      - Source: returnobjectproperties
+        Target: ReturnObjectProperties
+      - Source: returnaccessrules
+        Target: ReturnAccessRules
   Parameters:
     Type: Yaml
     Values:
       Groups:
       - Identity: 
     Dynamic:
-    - Name: identity
-      Path: Groups[0]:Identity
+    - Source: identity
+      Target: Groups[0]:Identity
