--- a/Syanpse.Services.ActiveDirectoryApi/Plans/PurgeAccessRulesOnOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/PurgeAccessRulesOnOrgUnit.yaml
@@ -18,14 +18,14 @@ Actions:
         ReturnAccessRules: false
         SuppressOutput: false
       Dynamic:
-      - Name: returngroupmembership
-        Path: ReturnGroupMembership
-      - Name: returnobjects
-        Path: ReturnObjects
-      - Name: returnobjectproperties
-        Path: ReturnObjectProperties
-      - Name: returnaccessrules
-        Path: ReturnAccessRules
+      - Source: returngroupmembership
+        Target: ReturnGroupMembership
+      - Source: returnobjects
+        Target: ReturnObjects
+      - Source: returnobjectproperties
+        Target: ReturnObjectProperties
+      - Source: returnaccessrules
+        Target: ReturnAccessRules
   Parameters:
     Type: Yaml
     Values:
@@ -34,7 +34,7 @@ Actions:
         AccessRules:
         - Identity: 
     Dynamic:
-    - Name: identity
-      Path: OrganizationalUnits[0]:Identity
-    - Name: ruleidentity
-      Path: OrganizationalUnits[0]:AccessRules[0]:Identity
+    - Source: identity
+      Target: OrganizationalUnits[0]:Identity
+    - Source: ruleidentity
+      Target: OrganizationalUnits[0]:AccessRules[0]:Identity
