--- a/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveAccessRuleFromOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveAccessRuleFromOrgUnit.yaml
@@ -18,14 +18,14 @@ Actions:
         ReturnAccessRules: false
         SuppressOutput: false
       Dynamic:
-      - Name: returngroupmembership
-        Path: ReturnGroupMembership
-      - Name: returnobjects
-        Path: ReturnObjects
-      - Name: returnobjectproperties
-        Path: ReturnObjectProperties
-      - Name: returnaccessrules
-        Path: ReturnAccessRules
+      - Source: returngroupmembership
+        Target: ReturnGroupMembership
+      - Source: returnobjects
+        Target: ReturnObjects
+      - Source: returnobjectproperties
+        Target: ReturnObjectProperties
+      - Source: returnaccessrules
+        Target: ReturnAccessRules
   Parameters:
     Type: Yaml
     Values:
@@ -36,11 +36,11 @@ Actions:
           Type: 
           Rights:
     Dynamic:
-    - Name: identity
-      Path: OrganizationalUnits[0]:Identity
-    - Name: ruleidentity
-      Path: OrganizationalUnits[0]:AccessRules[0]:Identity
-    - Name: ruletype
-      Path: OrganizationalUnits[0]:AccessRules[0]:Type
-    - Name: rulerights
-      Path: OrganizationalUnits[0]:AccessRules[0]:Rights
+    - Source: identity
+      Target: OrganizationalUnits[0]:Identity
+    - Source: ruleidentity
+      Target: OrganizationalUnits[0]:AccessRules[0]:Identity
+    - Source: ruletype
+      Target: OrganizationalUnits[0]:AccessRules[0]:Type
+    - Source: rulerights
+      Target: OrganizationalUnits[0]:AccessRules[0]:Rights
