- Code Cleanup - Added Domain support for API OrgUnit Calls. - Added Domain support for "GetAllGroups" custom search.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/GetAllGroups.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/GetAllGroups.yaml
@@ -19,6 +19,7 @@ Actions:
     Values:
       SearchRequests:
       - Filter: "(|(member:1.2.840.113556.1.4.1941:=~~distinguishedname~~)(distinguishedName=~~distinguishedname~~))"
+        SearchBase: 
         Parameters:
         - Find: ~~distinguishedname~~
           ReplaceWith: xxxxxxxx
@@ -32,3 +33,6 @@ Actions:
     Dynamic:
     - Source: distinguishedname
       Target: SearchRequests[0]:Parameters[0]:ReplaceWith
+    - Source: searchbase
+      Target: SearchRequests[0]:SearchBase
+    
