--- a/Syanpse.Services.ActiveDirectoryApi/Plans/AddAccessRuleToOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/AddAccessRuleToOrgUnit.yaml
@@ -35,6 +35,7 @@ Actions:
         - Identity: 
           Type: 
           Rights:
+          Inheritance:
     Dynamic:
     - Source: identity
       Target: OrganizationalUnits[0]:Identity
@@ -44,3 +45,5 @@ Actions:
       Target: OrganizationalUnits[0]:AccessRules[0]:Type
     - Source: rulerights
       Target: OrganizationalUnits[0]:AccessRules[0]:Rights
+    - Source: ruleinheritance
+      Target: OrganizationalUnits[0]:AccessRules[0]:Inheritance
